EPBDS-12700 Support merged SR in OpenAPI